projects and copy and images oh my

--- a/source/artallnight.html.erb
+++ b/source/artallnight.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Photography, &amp; Concept</p>
-<p>A book cover created for the novel Paper Towns written by John Green. For this project, I folded a map into a cityscape, photographed it in order to portray the importance of maps and the metaphor of paper in the story.</p>
+<p>Save the date, invitation, brochure, and giveaway created for Art All Night, an all night art festival in Washington, DC. The design aims to reflect late, fun nights with the use of photography and bright colors.</p>
 </div>
 <div class="project-image section">
     <img src="img/artallnight-2.jpg">
@@ -19,6 +19,9 @@
 <div class="project-image section">
     <img src="img/artallnight.gif">
 </div>
+<div class="project-description section">
+  <p>The brochure folds out into a poster.</p>
+  </div>
 </div>
 
 <%= partial 'partials/footer' %>
