--- a/source/designshow.html.erb
+++ b/source/designshow.html.erb
@@ -7,10 +7,13 @@
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design</p>
-<p>Worked with Josh Mahan and Cristina Keane to concept a library research assistant application. Our process began with research at American University to find that what students want in an app is an easy way to find books related to ones they have already acquired for research. We learned that most students are unfamiliar with how the library works, so we came up with a solution to lead them directly to books.</p>
+<p>A poster design for American University's annual Design Expo.</p>
 </div>
 <div class="project-image section">
     <img src="img/designshow.png">
+</div>
+<div class="project-image section">
+    <img src="img/designshow-2.jpg">
 </div>
 </div>
 
