--- a/source/little.html.erb
+++ b/source/little.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Photography, &amp; Concept</p>
-<p>Book covers made for the Little House series. More info coming soon.</p>
+<p>Book cover redesign for the Little House series. The series is about Laura Ingalls, a pinoeer child in the 1800s. The novels are based on different times in her life as her family moves from place to place. These are designed to appeal to adults who would have read these as a children, and want to purchase as keepsakes. The design reflects the setting in each story.</p>
 </div>
 <div class="project-image section">
     <img src="img/littlehouse-1.jpg">
