--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -8,8 +8,8 @@
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Branding, Concept</p>
 <p>A redesign for Megabus, a low-cost bus company that runs all throughout North America.</p><br>
-<p>The idea behind the rebrand was to bring professionalism back to Megabus with a clean, sophisticated design.</p>
-  <a class="live" href="http://allypalanzi.com/live/megabus-guidelines/" target="_blank">View Brand Guide</a>
+<p>The idea behind the rebrand was to bring professionalism back to Megabus with a clean, sophisticated design. The goal was to maintain visibility with busses and bus signage to make sure riders were able to find Megabus on curbsides.</p>
+  <a class="live" href="http://allypalanzi.com/live/megabus-styleguide/" target="_blank">View Brand Guide</a>
 
 </div>
 <div class="project-image section">
