--- a/source/offbeat.html.erb
+++ b/source/offbeat.html.erb
@@ -3,22 +3,15 @@
 <div class="project section">
 <h1>OffbeatDC</h1>
 <div class="project-image section">
-    <img src="img/artallnight-1.jpg">
-</div>
+<iframe src="//player.vimeo.com/video/81442328?title=0&amp;byline=0&amp;portrait=0&amp;color=22B573" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 <div class="project-description section">
-<p class="role"><strong>Role:</strong> Design, Photography, &amp; Concept</p>
-<p>A book cover created for the novel Paper Towns written by John Green. For this project, I folded a map into a cityscape, photographed it in order to portray the importance of maps and the metaphor of paper in the story.</p>
+<p class="role"><strong>Role:</strong> Design, Concept, Video</p>
+<p>OffbeatDC, sponsored by Megabus, is an iPhone application to guide tourists when traveling in unfamiliar cities. The app aims to help travelers discover local gems by recommending places that are strictly curated by locals. The app lets the user pick how much time they have to kill, how far they want to go, and what kind of place they want to enjoy. It then directs them to the place and allows them to review it.</p>
 </div>
 <div class="project-image section">
-    <img src="img/artallnight-2.jpg">
-</div>
-<div class="project-image section">
-    <img src="img/artallnight-3.jpg">
+    <img src="img/offbeat-1.jpg">
 </div>
 
-<div class="project-image section">
-    <img src="img/artallnight.gif">
-</div>
 </div>
 
 <%= partial 'partials/footer' %>
