--- a/source/papertowns.html.erb
+++ b/source/papertowns.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Photography, &amp; Concept</p>
-<p>A book cover created for the novel Paper Towns written by John Green. For this project, I folded a map into a cityscape, photographed it in order to portray the importance of maps and the metaphor of paper in the story.</p>
+<p>A revisioned book cover created for the novel Paper Towns written by John Green.</p>
 </div>
 </div>
 
