--- a/source/partials/_thumbs.html.erb
+++ b/source/partials/_thumbs.html.erb
@@ -18,7 +18,7 @@
 </li>
 <li>
     <a href="offbeat.html">
-        <img src="img/offbeat-thumb.png" alt="" class="thumbs"></a>
+        <img src="img/offbeat-thumb.jpg" alt="" class="thumbs"></a>
     </a>
 </li>
 <li>
