--- a/source/syke.html.erb
+++ b/source/syke.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Photography, Front-End Developer &amp; Concept</p>
-<p>One of the first websites I designed and coded, an event site created for Syke, a Northern Virginia non-profit. Each page features original photography</p>
+<p>One of the first websites I designed and coded, an event site created for Syke, a Northern Virginia non-profit.</p>
 <a class="live" href="http://allypalanzi.com/live/sykefest/" target="_blank">View it live!</a>
 </div>
 </div>
