--- a/source/virginiawoolf.html.erb
+++ b/source/virginiawoolf.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Photography, &amp; Concept</p>
-<p>Poster created for the play Who's Afraid of Virginia Woolf? For this project, I layed out symbols and items from the play on a table to demonstrate the disarray throughout the play, then photographed it. I overlaid bold, modern typography to give off the modern feel of the family structure in the play, even though it is about a family in the 60s.</p>
+<p>Advertisment created for Who's Afraid of Virginia Woolf? The poster aims to embody the chaotic nature of the play while pulling in symbols from the storyline.</p>
 </div>
 <div class="project-image section">
     <img src="img/virginiawoolf.jpg">
