--- a/source/ysc.html.erb
+++ b/source/ysc.html.erb
@@ -6,8 +6,11 @@
     <img src="img/ysc-2.jpg">
 </div>
 <div class="project-description section">
-<p class="role"><strong>Role:</strong>Identity, Design</p>
-<p>A brand refresh for the Yoga Service Council. More description coming soon.</p>
+<p class="role"><strong>Role: </strong>Identity, Design</p>
+<p>A brand refresh for the Yoga Service Council. For this rebrand, I wanted to reflect the calm nature of yoga with a relaxing, curved logo. The bright orange contrasts the mark in that it shows the liveliness of the company and grabs attention.</p>
+</div>
+<div class="project-image section">
+    <img src="img/ysc-logo.svg">
 </div>
 <div class="project-image section">
     <img src="img/ysc-1.png">
