new files and resume

--- a/source/chclt.html.erb
+++ b/source/chclt.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design</p>
-<p></p>
+<p>Packaging for all natural chocolate. Chocolate without the extra, get it?</p>
 </div>
 <div class="project-image section">
     <img src="img/chclt-2.jpg">
