--- a/source/designshow.html.erb
+++ b/source/designshow.html.erb
@@ -3,7 +3,7 @@
 <div class="project section">
 <h1>AU Design Expo</h1>
 <div class="project-image section">
-    <img src="img/designshow-1.png">
+    <img src="img/designshow-1.jpg">
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design</p>
