--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -46,8 +46,8 @@
           <a href="http://dribbble.com/allypalanzi" target="_blank">designer</a>
           and
           <a href="https://github.com/allypalanzi" target="_blank">front-end developer</a>
-          from Washington, DC. Currently a senior at American University &amp; a front-end engineer for
-          <a href="http://www.product.voxmedia.com" target="_blank">Vox Product</a>.
+          from Washington, DC. Currently a senior at American University &amp; a front-end designer for
+          <a href="http://product.voxmedia.com" target="_blank">Vox Product</a>.
         </h2>
       </div>
       <%= yield %>
