--- a/source/offbeat.html.erb
+++ b/source/offbeat.html.erb
@@ -11,7 +11,12 @@
 <div class="project-image section">
     <img src="img/offbeat-1.jpg">
 </div>
-
+<div class="project-image section">
+    <img src="img/offbeat-flowchart.png">
+</div>
+<div class="project-image section">
+    <img src="img/offbeat-wire.png">
+</div>
 </div>
 
 <%= partial 'partials/footer' %>
