--- a/source/papertowns.html.erb
+++ b/source/papertowns.html.erb
@@ -3,12 +3,13 @@
 <div class="project section">
 <h1>Paper Towns Book Cover</h1>
 <div class="project-image section">
-    <img src="img/papertowns.jpg">
+    <img src="img/papertowns-1.jpg">
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Photography, &amp; Concept</p>
 <p>A revisioned book cover created for the novel Paper Towns written by John Green.</p>
 </div>
+
 </div>
 
 <%= partial 'partials/footer' %>
