--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -4,6 +4,6 @@
     </h4>
     <p>
     &copy;Ally Palanzi. Forever and ever.
-    <a href="resume.pdf" target="_blank">View My Resume</a>.
+    <a href="/resume.html" target="_blank">View My Resume</a>.
     </p>
 </div>
