--- a/source/syke.html.erb
+++ b/source/syke.html.erb
@@ -10,6 +10,9 @@
 <p>One of the first websites I designed and coded, an event site created for Syke, a Northern Virginia non-profit.</p>
 <a class="live" href="http://allypalanzi.com/live/sykefest/" target="_blank">View it live!</a>
 </div>
+<div class="project-image section">
+    <img src="img/syke-2.jpg">
+</div>
 </div>
 
 <%= partial 'partials/footer' %>
