updating muse project

--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -6,38 +6,75 @@
     <img src="img/muse-landing.png">
 </div>
 <div class="project-description section">
-<p class="role"><strong>Role:</strong> App Development, Design, Concept, UI/UX, &amp; Photography</p>
-<p>For this project, I worked with Madeline Beard and Josh Mahan who helped with design, UI/UX, concepting, and developing the landing page.</p><br>
-<p>Muse is a web-app that makes every commute a creative experience while also bringing public, user-generated art to DC's metro stations.</p><br> 
+  <p class="role"><strong>Role:</strong> App Development, Design, Concept, UI/UX, &amp; Photography</p>
+  <p class="team"><strong>Team:</strong> Madeline Beard, Josh Mahan</p>
+
+  <p>Problem: People are impatient and bored waiting for public transportation in Washington, DC.</p>
+  <p>Goal: Create an app to occupy time creatively.</p>
+
+  <p>Given the problem, we decided to create Muse. Muse is a web-app that makes every commute a creative experience while also bringing public, user-generated art to DC's metro stations.</p>
+
   <p>Each week users are given a theme based on a quote from a DC native. Using this theme as a guide, each user can create their own works of art while traveling through the metro. Submitted works can be favorited by users on the gallery page. The more "likes" a submitted work gets, the larger the image appears on "digital canvases", set up in metro stations across the city.</p>
-<a class="live" target="_blank" href="http://allypalanzi.github.io/districtmuse/landing/">View Landing Page</a>
+
+  <a class="live" target="_blank" href="http://allypalanzi.github.io/districtmuse/landing/">View Landing Page</a>
 </div>
+<h3>Process</h3>
+<div class="project-description section">
+  <p>First, we started by sending out a survey to see what people spent their time doing while waiting for the metro. The results were clear: most spent the time browsing on their smartphones.</p>
+</div>
+
 <div class="project-image section">
-    <img src="img/muse.jpg">
+    flowchart
 </div>
 <div class="project-description section">
+  <p>We then began to break down the app and figure out exactly what we wanted it to do. Users can see the theme, check-in to the metro station they are waiting at, draw an image, and rate other users images in the gallery.</p>
+</div>
 
-<p>A physical mock of the boards located in metro stations.</p>
-</div>
 <div class="project-image section">
-    <img src="img/muse-app.jpg">
-</div>
-<div class="project-image section">
-    <img src="img/muse-process.jpg">
+    wireframe
 </div>
 <div class="project-description section">
-
-<p>Initial sketches.</p>
+  <p>Next began the wireframes. </p>
 </div>
+
 <div class="project-image section">
     <img src="img/muse-process1.jpg">
 </div>
 <div class="project-description section">
+  <p>After creating wireframes, we made a paper-prototype to test users to see how they used the app, and what we would need to change. The biggest challenge of this was setting the scene of being in the metro station, but luckily our app was pretty straight forward and the testers understood what to do.</p>
+</div>
 
-<p>A paper prototype created and tested to help figure out the UX of the app.</p>
-<a href="http://allypalanzi.github.io/districtmuse/presentation.pdf" class="live" target="_blank">View Presentation</a>
+<div class="project-image section">
+    <img src="img/muse-styletile.jpg">
+</div>
+<div class="project-description section">
+  <p>After testing, we moved on to design. We created moodboards to get the overall feel of our app.</p>
+</div>
+
+<div class="project-image section">
+    <!-- <img src="img/muse-app.jpg"> -->
+    <img src="img/muse-checkin.png" class="three-up">
+    <img src="img/muse-create.png" class="three-up">
+    <img src="img/muse-gallery.png" class="three-up">
+</div>
+<div class="project-description section">
+  <p>In order to create a successful design, we had to make the user understand exactly what they needed to do. We struggled setting up the opening screen with a few variations. We wanted the theme to be front and center so the user would have no question of what to do.</p>
+</div>
+<h3>The Digital Canvas</h3>
+<div class="project-image section">
+    <img src="img/muse.jpg">
+</div>
+<div class="project-description section">
+  <p>We decided we wanted to create an app that users could interact with not just on a phone, but in actual space too. This led to the idea of Digital Canvases. These would be set up in metro stations all over the city and display the top rated images from the gallery. Users would be able to interact with these boards by clicking images to view larger and  to see who posted them. These boards would also function as Wifi hotspots.</p>
+</div>
+
+<h3>Development</h3>
+<p>While all of this design was happening, I was rapidly prototyping the app. I developed it with the help of jQuery Mobile and Paper.js. All of the source code can be viewed on GitHub <a href="https://github.com/allypalanzi/districtmuse" target="_blank">here</a>.</p>
+<div class="project description section">
+<a class="live" target="_blank" href="http://allypalanzi.github.io/districtmuse/">View Prototype</a>
 </div>
 </div>
+
 
 
 <%= partial 'partials/footer' %>
