--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -25,7 +25,7 @@
   <p>Ticket redesign to be mobile friendly and easy for drivers to scan.</p>
 </div>
 <div class="project-image section">
-    <img src="img/megabus-3.png">
+    <img src="img/megabus-bus.jpg">
 </div>
 <div class="project-image section">
     <img src="img/megabus-sign.png">
