--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -182,6 +182,15 @@ to  {opacity: 0;}
         line-height: 30px;
     }
 
+    .project {
+        h3 {
+            font-size: 40px;
+            color: $green;
+            margin-bottom: 30px;
+            font-family: 'Oswald';
+        }
+    }
+
 
     h4 {
         font-family: 'socialicoregular';
@@ -190,10 +199,12 @@ to  {opacity: 0;}
 
     }
 
+
     p {
         font-size: 16px;
-        line-height: 20px;
-        margin: 0px auto;    
+        line-height: 24px;
+        margin: 0px auto;
+        margin-bottom: 12px;    
     }
 
     a {
@@ -450,10 +461,24 @@ textarea {
         border: 5px solid white;
         width: 97%;
     }
+    .three-up {
+        width: 25%;
+        margin: 3%;
+    }
 }
 
-.role {
-    margin-bottom: 20px;
+
+    strong {
+       color: $green;
+       font-weight: 700;
+    }
+.role, .team {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.team {
+    margin-bottom: 40px;
 }
 
 .live {
