finished updating muse project page

--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -18,23 +18,25 @@
 
   <a class="live" target="_blank" href="http://allypalanzi.github.io/districtmuse/landing/">View Landing Page</a>
 </div>
-<h3>Process</h3>
+<h3>Research, UI/UX, and Prototype Testing</h3>
 <div class="project-description section">
   <p>First, we started by sending out a survey to see what people spent their time doing while waiting for the metro. The results were clear: most spent the time browsing on their smartphones.</p>
 </div>
 
 <div class="project-image section">
-    flowchart
+    <img src="img/muse-flowchart-crop.png">
+    <cite>Click to view full size <a href="/img/muse-flowchart.png">here</a>.</cite>
 </div>
 <div class="project-description section">
   <p>We then began to break down the app and figure out exactly what we wanted it to do. Users can see the theme, check-in to the metro station they are waiting at, draw an image, and rate other users images in the gallery.</p>
 </div>
 
 <div class="project-image section">
-    wireframe
+    <img src="img/muse-wire-crop.png">
+    <cite>View full wireframes <a href="img/muse-wires.png">here</a>.</cite>
 </div>
 <div class="project-description section">
-  <p>Next began the wireframes. </p>
+  <p>Next: creating the wireframes.</p>
 </div>
 
 <div class="project-image section">
@@ -43,6 +45,8 @@
 <div class="project-description section">
   <p>After creating wireframes, we made a paper-prototype to test users to see how they used the app, and what we would need to change. The biggest challenge of this was setting the scene of being in the metro station, but luckily our app was pretty straight forward and the testers understood what to do.</p>
 </div>
+
+<h3>Visual Design</h3>
 
 <div class="project-image section">
     <img src="img/muse-styletile.jpg">
@@ -53,9 +57,9 @@
 
 <div class="project-image section">
     <!-- <img src="img/muse-app.jpg"> -->
-    <img src="img/muse-checkin.png" class="three-up">
-    <img src="img/muse-create.png" class="three-up">
-    <img src="img/muse-gallery.png" class="three-up">
+    <img src="img/muse-intro.gif" class="three-up">
+    <img src="img/muse-gallery.gif" class="three-up">
+    <img src="img/muse-create.gif" class="three-up">
 </div>
 <div class="project-description section">
   <p>In order to create a successful design, we had to make the user understand exactly what they needed to do. We struggled setting up the opening screen with a few variations. We wanted the theme to be front and center so the user would have no question of what to do.</p>
