--- a/source/resume.html.erb
+++ b/source/resume.html.erb
@@ -27,10 +27,9 @@
   </div>
      
   <div class="resume-description">
-    <h2>TA for Ross Nover</h2>
+    <h2>TA for Intro to Web Design</h2>
     <h3>August 2011 — December 2011</h3>
     <ul>
-      <li>Computer Literacy for Design (Intro to Web Design)</li>
       <li>Aided professor with teaching basic website design and 
  coding with HTML, CSS, and JavaScript</li>
       <li> Helped students debug code and overcome various
