--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -221,6 +221,12 @@ to  {opacity: 0;}
         }
     }
 
+    cite {
+        font-size: 11px;
+        font-style: italic;
+        padding: 10px;
+    }
+
 
 
     div a {
