--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -1,4 +1,4 @@
-<a href="virginiawoolf.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="ysc.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="artallnight.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Megabus Rebranding</h1>
