--- a/source/partials/_js.html.erb
+++ b/source/partials/_js.html.erb
@@ -1,5 +1,5 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-<script src="js/functions.js"></script>
+<script src="javascripts/all.js"></script>
 
 <script type="text/javascript">
 
