fixing dribbbbbbble whoops

--- a/source/ysc.html.erb
+++ b/source/ysc.html.erb
@@ -1,5 +1,5 @@
 <a href="offbeat.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="virginiawoolf.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="megabus.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Yoga Service Council Rebrand</h1>
 <div class="project-image section">
