--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -1,16 +1,22 @@
 <a href="ukrave.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="vox.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
-<h1>Muse</h1>
+<h1>Muse - the district is your canvas</h1>
 <div class="project-image section">
     <img src="img/muse-landing.png">
 </div>
 <div class="project-description section">
-  <p class="role"><strong>Role:</strong> App Development, Design, Concept, UI/UX, &amp; Photography</p>
-  <p class="team"><strong>Team:</strong> Madeline Beard, Josh Mahan</p>
+  <strong class="role-title">Role:</strong> 
+  <ul class="role">
+    <li>App Development, Design, Concept, UI/UX, &amp; Photography</li>
+    <li>Madeline Beard: Design, Concept, UI/UX, Photography, Landing page development</li>
+    <li>Josh Mahan: Design, Concept, UI/UX, Branding</li>
+  </ul>
 
-  <p>Problem: People are impatient and bored waiting for public transportation in Washington, DC.</p>
-  <p>Goal: Create an app to occupy time creatively.</p>
+  <div class="problem">
+    <p><em>Problem:</em> People are impatient and bored waiting for public transportation in Washington, DC.</p>
+    <p><em>Solution:</em> Create an app to occupy time creatively.</p>
+  </div>
 
   <p>Given the problem, we decided to create Muse. Muse is a web-app that makes every commute a creative experience while also bringing public, user-generated art to DC's metro stations.</p>
 
@@ -18,7 +24,7 @@
 
   <a class="live" target="_blank" href="http://allypalanzi.github.io/districtmuse/landing/">View Landing Page</a>
 </div>
-<h3>Research, UI/UX, and Prototype Testing</h3>
+<h3>Research, UI/UX, and User Testing</h3>
 <div class="project-description section">
   <p>First, we started by sending out a survey to see what people spent their time doing while waiting for the metro. The results were clear: most spent the time browsing on their smartphones.</p>
 </div>
@@ -46,7 +52,7 @@
   <p>After creating wireframes, we made a paper-prototype to test users to see how they used the app, and what we would need to change. The biggest challenge of this was setting the scene of being in the metro station, but luckily our app was pretty straight forward and the testers understood what to do.</p>
 </div>
 
-<h3>Visual Design</h3>
+<h3>Interface Design</h3>
 
 <div class="project-image section">
     <img src="img/muse-styletile.jpg">
@@ -57,14 +63,14 @@
 
 <div class="project-image section">
     <!-- <img src="img/muse-app.jpg"> -->
-    <img src="img/muse-intro.gif" class="three-up">
-    <img src="img/muse-gallery.gif" class="three-up">
-    <img src="img/muse-create.gif" class="three-up">
+    <img src="img/muse-intro.gif" class="three-up gif">
+    <img src="img/muse-gallery.gif" class="three-up gif">
+    <img src="img/muse-create.gif" class="three-up gif">
 </div>
 <div class="project-description section">
   <p>In order to create a successful design, we had to make the user understand exactly what they needed to do. We struggled setting up the opening screen with a few variations. We wanted the theme to be front and center so the user would have no question of what to do.</p>
 </div>
-<h3>The Digital Canvas</h3>
+<h3>Beyond the Phone Screen</h3>
 <div class="project-image section">
     <img src="img/muse.jpg">
 </div>
