--- a/source/partials/_js.html.erb
+++ b/source/partials/_js.html.erb
@@ -79,6 +79,7 @@
     }
 
     window.onload = showPhotos;
+$('.gif').playGIF();
 
 </script>
 <script type="text/javascript" src="http://api.flickr.com/services/feeds/photos_public.gne?id=34712236@N03&lang=en-us&format=json"></script>
