fixed gif hover thing and added icons

--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -63,9 +63,21 @@
 
 <div class="project-image section">
     <!-- <img src="img/muse-app.jpg"> -->
-    <img src="img/muse-intro.gif" class="three-up gif">
+    <div class="three-up-container">
+      <img class="icon" src="img/muse-checkin-icon.png">
+      <p>Check-in</p>
+      <img src="img/muse-intro.gif" class="three-up gif">
+    </div>
+    <div class="three-up-container">
+      <img class="icon" src="img/muse-favorite-icon.png">
+      <p>Favorite Images</p>
     <img src="img/muse-gallery.gif" class="three-up gif">
+  </div>
+    <div class="three-up-container">
+      <img class="icon" src="img/muse-create-icon.png">
+      <p>Create</p>
     <img src="img/muse-create.gif" class="three-up gif">
+  </div>
 </div>
 <div class="project-description section">
   <p>In order to create a successful design, we had to make the user understand exactly what they needed to do. We struggled setting up the opening screen with a few variations. We wanted the theme to be front and center so the user would have no question of what to do.</p>
