--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -3,33 +3,78 @@
 <div class="project section">
 <h1>Megabus Rebranding</h1>
 <div class="project-image section">
-    <img src="img/megabus.jpg">
+    <img src="img/megabus-logo.svg" class="megabus">
 </div>
 <div class="project-description section">
-<p class="role"><strong>Role:</strong> Design, Branding, Concept</p>
-<p>A redesign for Megabus, a low-cost bus company that runs all throughout North America.</p><br>
-<p>The idea behind the rebrand was to bring professionalism back to Megabus with a clean, sophisticated design. The goal was to maintain visibility with busses and bus signage to make sure riders were able to find Megabus on curbsides.</p>
-  <a class="live" href="http://allypalanzi.com/live/megabus-styleguide/" target="_blank">View Brand Guide</a>
+  <strong class="role-title">Role:</strong> 
+    <ul class="role">
+      <li>Design, Branding, Concept</li>
+    </ul>
 
+  <div class="problem">
+    <p><em>Problem:</em> Megabus has a very disconnected brand identity and negative brand perception.</p>
+    <p><em>Solution:</em> Give Megabus a distinct, modern look to help increase their brand and perception.</p>
+  </div>
+
+<p>Megabus is a service that provides low-cost travel all across the United States and Canada. With the brand refresh, I wanted to make Megabus feel modern, clean, and sophisticated. A major goal of the rebranding, was to make busses and bus signs extremely visible since they can often be difficult to spot when searching for bus stations.</p>
+
+</div>
+<h3>Getting Started</h3>
+<div class="project-image section">
+  [logo sketches]
+</div>
+<div class="project-description section">
+
+  <p>I began with the logo. Played with the ideas of connectivity, maps, travel, and obvious bus cliches.</p>
+</div>
+<div class="project-image section">
+<img src="img/megabus-brandguide.jpg">
+</div>
+<div class="project-description section">
+
+  <p>Once the logo was finalized, I began working on a style guide to determine brand colors and typography. With such a huge project scope, it’s easy to lose focus and consistency. I found that making a style guide helped this process. I decided to create a “living” online style guide so it could be easily updated.</p>
+  <a class="live" href="http://allypalanzi.com/live/megabus-styleguide/" target="_blank">View Brand Guide</a>
+</div>
+
+<h3>Visual Design</h3>
+
+<div class="project-image section">
+  [various sketches]
+</div>
+<div class="project-description section">
+
+
+  <p>Some of the key elements to work out for this redesign were stationery, a bus sign, and new mobile friendly tickets. I began sketching out what these would look like.</p>
+</div>
+<div class="project-image section">
+  <img src="img/megabus.jpg">
+</div>
+<div class="project-image section">
+  <img src="img/megabus-ticket.jpg">
+</div>
+<div class="project-description section">
+
+  <p>Ticket redesign to be mobile friendly and easy for drivers to scan.</p>
+</div>
+<div class="project-image section">
+  <img src="img/megabus-bus.jpg">
+</div>
+<div class="project-image section">
+  <img src="img/megabus-sign.png">
+</div>
+
+<h3>The Campaign</h3>
+<div class="project-image section">
+  [sketches]
+</div>
+<div class="project-description section">
+
+  <p>“Where will you go next?” would be the brand advertising campaign. The advertisements would promote Megabus as an easy, efficient way of traveling.</p>
 </div>
 <div class="project-image section">
     <img src="img/megabus-1.jpg">
 </div>
-<div class="project-description section">
-  <p>The idea behind the ad campaign "Where will you go next?" is to promote travel between cities using Megabus.</p>
-</div>
-<div class="project-image section">
-    <img src="img/megabus-ticket.jpg">
-</div>
-<div class="project-description section">
-  <p>Ticket redesign to be mobile friendly and easy for drivers to scan.</p>
-</div>
-<div class="project-image section">
-    <img src="img/megabus-bus.jpg">
-</div>
-<div class="project-image section">
-    <img src="img/megabus-sign.png">
-</div>
+
 </div>
 
 <%= partial 'partials/footer' %>
