--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -61,8 +61,7 @@
   <p>After testing, we moved on to design. We created moodboards to get the overall feel of our app.</p>
 </div>
 
-<div class="project-image section">
-    <!-- <img src="img/muse-app.jpg"> -->
+<div class="project-image section no-white-bg">
     <div class="three-up-container">
       <img class="icon" src="img/muse-checkin-icon.png">
       <p>Check-in</p>
@@ -82,7 +81,7 @@
 <div class="project-description section">
   <p>In order to create a successful design, we had to make the user understand exactly what they needed to do. We struggled setting up the opening screen with a few variations. We wanted the theme to be front and center so the user would have no question of what to do.</p>
 </div>
-<h3>Beyond the Phone Screen</h3>
+<h3>Beyond the Device</h3>
 <div class="project-image section">
     <img src="img/muse.jpg">
 </div>
