--- a/source/vox.html.erb
+++ b/source/vox.html.erb
@@ -7,8 +7,13 @@
 </div>
 <div class="project-description section">
   <h1>VoxMedia.com</h1>
-  <p class="role"><strong>Role:</strong> Front-End Developer</p>
-  <p>Website and Media Kit built for Vox Media. I worked alongside designers (Uy Tieu, Ramla Mahmood, Ted Irvine) and developers (Tate Tozer, John Fuller, Joe Grossberg) to build out this site.</p>
+  <strong class="role-title">Role:</strong> 
+  <ul class="role">
+    <li>Front-end Developer</li>
+    <li>Tate Tozer, John Fuller, Joe Grossberg: Development</li>
+    <li>Uy Tieu, Ted Irvine, Ramla Mahmood: Design</li>
+  </ul>  
+  <p>Website and Media Kit built for Vox Media.</p>
   <p>During this project, I also created an online <a href="http://voxmedia.com/styleguide/" target="_blank">styleguide</a> and responsive <a href="http://voxmedia.com/moodboards/" target="_blank">moodboards</a> that were written about on the <a href="http://product.voxmedia.com/post/57083313268/staticity-no-more" target="_blank">Vox Product Blog</a>.</p> 
   <a class="live" href="http://www.voxmedia.com" target="_blank">View it live!</a>
 </div>
@@ -17,11 +22,17 @@
 </div>
 <div class="project-description section">
   <h1>Onboarding</h1>
-  <p class="role"><strong>Role:</strong> Front-End Developer</p>
-  <p>During the annual Vox Media Hackathon, Vax, I worked with Kelsey Scherer, Katharine Molloy, Ramla Mahmood, and Ngan Hoang to make the company's onboarding proces a little better. This is an internal three page website that outlines the process for new employees.</p>
+    <strong class="role-title">Role:</strong> 
+
+  <ul class="role">
+    <li>Front-end Developer</li>
+    <li>Ramla Mahmood, Kelsey Scherer, Katharine Molloy, Ngan Hoang: Designers</li>
+  </ul>
+  <p>During the semi-annual Vox Media Hackathon, Vax, I to make the company's onboarding proces a little better. This is an internal three page website that outlines the process for new employees.</p>
 </div>
 <div class="project-image section">
     <img src="img/rivera.gif">
+  </div>
     <div class="project-description section">
   <h1>Mariano Rivera Retrospective</h1>
   <p class="role"><strong>Role:</strong> Front-End Developer</p>
