updating muse and megabus

--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -21,7 +21,7 @@
 </div>
 <h3>Getting Started</h3>
 <div class="project-image section">
-  [logo sketches]
+<img src="img/megabus-sketches.jpg">
 </div>
 <div class="project-description section">
 
@@ -38,9 +38,6 @@
 
 <h3>Visual Design</h3>
 
-<div class="project-image section">
-  [various sketches]
-</div>
 <div class="project-description section">
 
 
@@ -64,16 +61,14 @@
 </div>
 
 <h3>The Campaign</h3>
-<div class="project-image section">
-  [sketches]
-</div>
-<div class="project-description section">
 
-  <p>“Where will you go next?” would be the brand advertising campaign. The advertisements would promote Megabus as an easy, efficient way of traveling.</p>
-</div>
+<div class="project-description section">
 <div class="project-image section">
     <img src="img/megabus-1.jpg">
 </div>
+  <p>“Where will you go next?” would be the brand advertising campaign. The advertisements would promote Megabus as an easy, efficient way of traveling.</p>
+</div>
+
 
 </div>
 
