--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -61,7 +61,7 @@
   <p>After testing, we moved on to design. We created moodboards to get the overall feel of our app.</p>
 </div>
 
-<div class="project-image section no-white-bg">
+<div class="project-image section no-white">
     <div class="three-up-container">
       <img class="icon" src="img/muse-checkin-icon.png">
       <p>Check-in</p>
