--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -382,7 +382,7 @@ to  {opacity: 0;}
 
 input {
     width: 100%;
-    font-family:  "Arvo";
+    font-family:  "Open Sans";
     font-size: 14px;
     line-height:  20px;
     margin-top: 10px;
@@ -393,7 +393,7 @@ input {
 textarea {
     width: 100%;
     height: 162px;
-    font-family:  "Arvo";
+    font-family:  "Open Sans";
     font-size: 14px;
     line-height:  20px;
     margin-top: 10px;
@@ -476,7 +476,7 @@ textarea {
 
    
     }
-         &.no-white-bg {
+         &.no-white {
             background: none;
         }
 
