update muse image

--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -3,7 +3,7 @@
 <div class="project section">
 <h1>Muse - the district is your canvas</h1>
 <div class="project-image section">
-    <img src="img/muse-landing.png">
+    <img src="img/muse-landing.jpg">
 </div>
 <div class="project-description section">
   <strong class="role-title">Role:</strong> 
