--- a/source/offbeat.html.erb
+++ b/source/offbeat.html.erb
@@ -3,19 +3,43 @@
 <div class="project section">
 <h1>OffbeatDC</h1>
 <div class="project-image section">
-<iframe src="//player.vimeo.com/video/81442328?title=0&amp;byline=0&amp;portrait=0&amp;color=22B573" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+  <img src="img/offbeat-top-image.jpg">
+</div>
 <div class="project-description section">
-<p class="role"><strong>Role:</strong> Design, Concept, Video</p>
-<p>OffbeatDC, sponsored by Megabus, is an iPhone application to guide tourists when traveling in unfamiliar cities. The app aims to help travelers discover local gems by recommending places that are strictly curated by locals. The app lets the user pick how much time they have to kill, how far they want to go, and what kind of place they want to enjoy. It then directs them to the place and allows them to review it.</p>
+ <strong class="role-title">Role:</strong> 
+  <ul class="role">
+    <li>Design, UI/UX, Concept, Video Prototype</li>
+  </ul>
+  <div class="problem">
+    <p><em>Problem:</em> Traveling to a new city is difficult. It’s hard to find places to go, and not feel like a tourist.</p>
+    <p><em>Solution:</em> Create an app that allows locals to suggest their favorite places to visit that sets it apart from other travel applications.</p>
+  </div>
+
+  <p>OffbeatDC, sponsored by Megabus, is an iPhone application to guide tourists when traveling in unfamiliar cities. The app aims to help travelers discover local gems by recommending places that are strictly curated by locals. The app lets the user pick how much time they have to kill, how far they want to go, and what kind of place they want to enjoy. It then directs them to the place and allows them to review it based on their experience.</p>
 </div>
-<div class="project-image section">
-    <img src="img/offbeat-1.jpg">
-</div>
+<h3>Not just another travel app</h3>
+
 <div class="project-image section">
     <img src="img/offbeat-flowchart.png">
 </div>
+<div class="project description section">
+  <p>I wanted to focus on finding places to visit quickly. After researching, it was clear that users generally have a very specific amount of time they have and specific interests so the app should be based off of these key things.</p>
+  </div>
+
 <div class="project-image section">
     <img src="img/offbeat-wire.png">
+</div>
+
+<div class="project-image section">
+    <img src="img/offbeat-screens-1.jpg">
+</div>
+
+<div class="project-image section">
+    <img src="img/offbeat-screens-2.jpg">
+</div>
+
+<div class="project-image section">
+  <iframe src="//player.vimeo.com/video/81442328?title=0&amp;byline=0&amp;portrait=0&amp;color=22B573" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 </div>
 
